fixed height and cutoff problem with experience.hbs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ div.container-fluid {
 	align-items: center;
 	margin: 20px 0 20px 0;
 	padding-left: 0px;
+	padding-bottom: 100px !important;
 }
 #card-text {
 	text-shadow: 1px 1px black;
